--- a/src/EntityFramework.Rx/EntityFramework.Rx.csproj
+++ b/src/EntityFramework.Rx/EntityFramework.Rx.csproj
@@ -5,7 +5,7 @@
     <Description>Reactive extension wrappers for hot observables of Entity Framework entities</Description>
     <Authors>Nick Strupat</Authors>
     <PackageId>EntityFramework.Rx</PackageId>
-    <PackageTags>rx;reactive;reactive-extensions;entity-framework-core;entityframeworkcore;entity;framework;core;triggers</PackageTags>
+    <PackageTags>rx;reactive;reactive-extensions;entity-framework;entityframework;entity;framework;triggers</PackageTags>
     <PackageProjectUrl>https://github.com/NickStrupat/EntityFramework.Rx</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/NickStrupat/EntityFramework.Rx/master/LICENSE</PackageLicenseUrl>
     <Version>2.0.0-beta2</Version>
