--- a/src/EntityFramework.Rx.AspNetCore/EntityFramework.Rx.AspNetCore.csproj
+++ b/src/EntityFramework.Rx.AspNetCore/EntityFramework.Rx.AspNetCore.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework.Rx" Version="2.0.0-beta2" />
+    <PackageReference Include="EntityFramework.Rx" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="NickStrupat.EntityFramework.Triggers.AspNetCore" Version="1.0.0" />
   </ItemGroup>
