--- a/src/EntityFramework.Rx/EntityFramework.Rx.csproj
+++ b/src/EntityFramework.Rx/EntityFramework.Rx.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.1</TargetFrameworks>
     <Description>Reactive extension wrappers for hot observables of Entity Framework entities</Description>
     <Authors>Nick Strupat</Authors>
     <PackageId>EntityFramework.Rx</PackageId>
     <PackageTags>rx;reactive;reactive-extensions;entity-framework;entityframework;entity;framework;triggers</PackageTags>
     <PackageProjectUrl>https://github.com/NickStrupat/EntityFramework.Rx</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/NickStrupat/EntityFramework.Rx/master/LICENSE</PackageLicenseUrl>
-    <Version>2.0.0-beta2</Version>
+    <Version>2.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework.Triggers" Version="6.2.0" />
+    <PackageReference Include="EntityFramework.Triggers" Version="6.2.1" />
     <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
