--- a/src/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
+++ b/src/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
@@ -8,7 +8,7 @@
     <PackageTags>rx;reactive;reactive-extensions;entity-framework-core;entityframeworkcore;entity;framework;core;triggers</PackageTags>
     <PackageProjectUrl>https://github.com/NickStrupat/EntityFramework.Rx</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/NickStrupat/EntityFramework.Rx/master/LICENSE</PackageLicenseUrl>
-    <Version>2.0.0-beta2</Version>
+    <Version>2.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -21,7 +21,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.2.0" />
+    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.2.1" />
     <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
